# mini-redis

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
src/: db.c  dict.c  dict.h  redis.h  redisdict.c  redisdict.h  sds.c  sds.h  ziplist.c  ziplist.h  zskiplist.c  zskiplist.h
tests/: dictTests.c  redisDictTests.c  ziplistTests.c
